@@ -1,3 +1,10 @@
+2006-12-17  Jean-François Rameau  <jframeau@cvs.gnome.org>
+
+	* embed/ephy-adblock-manager.c:
+	* embed/ephy-adblock-manager.h:
+
+	Add a signal so one can react after some rules have been edited.
+
 2006-12-17  Björn Lindqvist  <bjourne@gmail.com>
 
 	* embed/ephy-encodings.c
